# WasmFX

./: .editorconfig  .gitignore  LICENSE  README.md  build.sh
.github/workflows/: deploy.yml
demo_site/: angular.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
demo_site/src/: CNAME  index.html  styles.css
demo_site/src/app/: app.component.css  app.component.css.backup  app.component.html  app.component.ts
wasm_lib/: Cargo.toml
wasm_lib/.cargo/: config.toml
wasm_lib/src/: lib.rs
