[package]
name = "wasm_lib"
version = "0.1.0"
authors = ["WasmFX Team <team@wasmfx.dev>"]
edition = "2021"
rust-version = "1.91.0"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack]
profile-release = { wasm-opt = ["-O3"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]

[dependencies]
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }

# web-sys is used for logging (console.log)
[dependencies.web-sys]
version = "0.3.76"
features = [
  "console",
]
